--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -1,23 +1,58 @@
+/* COLORS
+lightgreen: #d8e8d9
+green: #a7d4ac
+gray: #474a48  */
+
 body{
-    background-color: red;
+    background-color:#d8e8d9 ;
     text-align: center;
+    margin: 0;
 }
 
-.logout{
-    position: fixed;
-    bottom: 10px;
-    left: 10px;
+header{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color:#a7d4ac ;
 }
 
-.logout form button{
-    font-size: 20px;
+header .title{
+    flex: 75%;
+}
 
-    width: min-content;
-    /* background-color: transparent; */
-    /* border: 5px solid black; */
-    /* border-radius: 50%; */
-    text-align: center;
-    /* aspect-ratio: 1; */
+header .logout-btn{
+    flex: 25%;
+}
+
+header .logout-btn button{
+    width: 90%;
+    background-color: transparent;
+    border: none;
+}
+
+header .logout-btn button img{
+    width: 35px;
+    filter: invert(26%) sepia(7%) saturate(204%) hue-rotate(87deg) brightness(101%) contrast(92%);
+}
+
+header .logout-btn button p{
+    margin: auto;
+}
+
+h1, button{
+    color: #474a48;
+}
+
+button{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-style: italic;
+}
+
+header h1{
+    margin: 0;
+    padding: 21.440px 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .actions{
@@ -25,7 +60,9 @@ body{
     position: relative;
     flex-wrap: wrap;
     width: 90%;
-    margin: auto;
+    max-height: 85vh;
+    overflow-y: scroll;
+    margin: 20px auto;
 }
 
 .actions form{
@@ -37,19 +74,11 @@ body{
 
 .actions form button{
     margin: 0;
-    /* flex: 40%; */
-    /* margin: 5%; */
     width: -webkit-fill-available;
+    width: -moz-available;
     aspect-ratio: 1;
-    /* max-width: 40%; */
     font-size: 20px;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    background-color: #a7d4ac;
 }
-
-/* .actions button{
-    flex: 40%;
-    margin: 5%;
-    aspect-ratio: 1;
-    max-width: 40%;
-    font-size: 20px;
-
-} */
