--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#a7d4ac"/>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:ital,wght@1,500&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <title>Log In</title>
     <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
     <h1>hello, welcome to my room</h1>
-    <h2>please log in to continue</h2>
-    <form action="/log-in" method="post">
-        <input type="text" name="username", placeholder="username">
-        <input type="password" name="password" id="" placeholder="enter password here">
-        <button method="submit">Log In</button>
-    </form>
-    
+    <div class="container">
+        <h2>please log in to continue</h2>
+        <form action="/log-in" method="post">
+            <input type="text" name="username", placeholder="username">
+            <input type="password" name="password" id="" placeholder="enter password here">
+            <button method="submit">Log In</button>
+        </form>
+    </div>
 </body>
 </html>
