--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,25 +1,24 @@
-/* COLORS
-lightgreen: #d8e8d9
-green: #a7d4ac
-gray: #474a48  */
-
+:root{
+    --very-light-green: #d8e8d9;
+    --green: #a7d4ac;
+    --gray: #474a48;
+}
 
 body{
-    background-color: red;
     text-align: center;
     margin: 0;
-    background-color: #d8e8d9;
+    background-color: var(--very-light-green);
     font-family: 'Raleway', sans-serif;
 }
 
 
 h1, h2, button{
-    color: #474a48;
+    color: var(--gray);
 }
 
 
 h1{
-    background-color: #a7d4ac;
+    background-color: var(--green);
     margin: 0;
     padding: 20px;
     font-family: 'Poppins', sans-serif;
@@ -43,7 +42,7 @@ form{
 form > input , form > button{
     margin: 10px 50px;
     font-size: 17px;
-    border:1px solid #474a48 ;
+    border:1px solid var(--gray) ;
     border-radius: 50px;
     font-family: 'Raleway', sans-serif;
 }
@@ -56,7 +55,7 @@ form input{
 form button{
     padding-top: 3px;
     padding-bottom: 3px;
-    background-color: #a7d4ac;
+    background-color: var(--green);
     font-weight: 500;
 }
 
