--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#a7d4ac"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Raleway:ital,wght@1,500&display=swap" rel="stylesheet">
-    <title>Matan's room</title>
+    <title>My room</title>
     <link rel="stylesheet" href="styles/room.css">
 </head>
 <body>
     <header>
         <div class="title">
-            <h1>MATAN'S ROOM</h1>
+            <h1>MY ROOM</h1>
         </div>
         <div class="logout-btn">
             <form action="/log-out" method="post">
