feedback from server to user was added. for example if login credential incorrect, the user will recive an error alert, or if the user tried to login and there was an error in the proccess the user will recive a 'we had a problem please try again' message.

--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -76,7 +76,7 @@ header h1{
 }
 
 .actions form{
-    flex: var(--action-form-dimensions);
+    flex: calc(100%/var(--number-of-buttons));
     box-sizing: border-box;
     padding: 5%;
     height: var(--action-form-dimensions);
