--- a/views/room.ejs
+++ b/views/room.ejs
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles/room.css">
 </head>
 <body>
+    <%if(locals.error) {%>
+        <script>alert("<%=error%>")</script>
+    <%}%>
     <header>
         <div class="title">
             <h1>MY ROOM</h1>
